--- a/source/sass/block/_about.scss
+++ b/source/sass/block/_about.scss
@@ -87,7 +87,7 @@
   }
 }
 
-/*--------------------------------- КABOUT/КОРОТКО О НАС - ПЛАНШЕТ ---------------------------------------*/
+/*--------------------------------- ABOUT/КОРОТКО О НАС - ПЛАНШЕТ ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .about {
