--- a/source/sass/block/_button.scss
+++ b/source/sass/block/_button.scss
@@ -1,3 +1,5 @@
+/*--------------------------------- BUTTONS/КНОПКИ ---------------------------------------*/
+
 .btn {
   display: inline-block;
   width: 260px;
@@ -33,6 +35,8 @@
   }
 }
 
+/*--------------------------------- BUTTONS/КНОПКИ - ПЛАНШЕТ ---------------------------------------*/
+
 @media (min-width: $tablet-width) {
   .btn {
     width: 292px;
@@ -67,6 +71,8 @@
     opacity: 0.3;
   }
 }
+
+/*--------------------------------- BUTTONS/КНОПКИ - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .btn__slider {
