--- a/source/sass/block/_contacts.scss
+++ b/source/sass/block/_contacts.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- CONTACTS/КОНТАКТЫ ---------------------------------------*/
 .contacts {
   margin-top: 90px;
 }
@@ -80,7 +81,7 @@
   text-align: center;
 }
 
-/*---------------------------------   КОНТАКТЫ - ПЛАНШЕТ ---------------------------------------*/
+/*--------------------------------- CONTACTS/КОНТАКТЫ - ПЛАНШЕТ ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .contacts {
@@ -149,7 +150,7 @@
   }
 }
 
-/*---------------------------------   КОНТАКТЫ - ДЕСКТОП ---------------------------------------*/
+/*--------------------------------- CONTACTS/КОНТАКТЫ - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .contacts {
@@ -163,7 +164,7 @@
     font-size: 53px;
     line-height: 1.08;
     padding-left: 168px;
-    width: 500px;
+    max-width: 100px;
   }
 
   .contacts__list {
