--- a/source/sass/block/_copyright.scss
+++ b/source/sass/block/_copyright.scss
@@ -1,5 +1,4 @@
-// ФУТЕР ССЫЛКА И ЛОГО НА
-
+/*--------------------------------- COPYRIGHT/АВТОРСКИЕ ПРАВА ------------------------------------------*/
 .copyright {
   display: flex;
   margin: 0 auto;
@@ -32,6 +31,8 @@
   fill: #63d1bb;
 }
 
+/*--------------------------------- COPYRIGHT/АВТОРСКИЕ ПРАВА - ПЛАНШЕТ ------------------------------------------*/
+
 @media (min-width: $tablet-width) {
   .copyright {
     justify-content: flex-end;
@@ -40,6 +41,8 @@
     margin: 0;
   }
 }
+
+/*--------------------------------- COPYRIGHT/АВТОРСКИЕ ПРАВА - ДЕСКТОП ------------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .copyright {
