--- a/source/sass/block/_favorites.scss
+++ b/source/sass/block/_favorites.scss
@@ -1,4 +1,4 @@
-/*--------------------------------- FAVORITES/ВЯЗАНЫЕ КОРЗИНКИ - ВЯЗАНЫЕ КОРЗИНКИ ---------------------------------------*/
+/*--------------------------------- FAVORITES/ВЯЗАНЫЕ КОРЗИНКИ ---------------------------------------*/
 
 .favorites {
   margin: auto;
