--- a/source/sass/block/_form.scss
+++ b/source/sass/block/_form.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- FORM/ФОРМА - ПЛАНШЕТ ---------------------------------------*/
 
 .form__container {
   @include container;
