--- a/source/sass/block/_heading.scss
+++ b/source/sass/block/_heading.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- HEADING/ЗАГОЛОВКИ ---------------------------------------*/
 .heading {
   font-weight: 700;
   font-style: normal;
@@ -20,6 +21,8 @@
   }
 }
 
+/*--------------------------------- HEADING/ЗАГОЛОВКИ - ПЛАНШЕТ ---------------------------------------*/
+
 @media (min-width: $tablet-width) {
   .heading {
     &--primary {
@@ -38,6 +41,8 @@
     }
   }
 }
+
+/*--------------------------------- HEADING/ЗАГОЛОВКИ - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .heading {
