--- a/source/sass/block/_main-nav.scss
+++ b/source/sass/block/_main-nav.scss
@@ -1,4 +1,4 @@
-/*--------------------------------- ГЛАВНАЯ НАВИГАЦИЯ ------------------------------------------*/
+/*--------------------------------- MAIN NAV/ ГЛАВНАЯ НАВИГАЦИЯ ------------------------------------------*/
 .main-nav {
   width: 320px;
   background-color: transparent;
@@ -157,6 +157,10 @@
     &--mobile-nojs .main-nav__list {
       display: block;
     }
+
+    &--mobile-nojs .main-nav__list--promo {
+      display: none;
+    }
   }
 }
 
@@ -164,7 +168,7 @@
   margin-top: 0;
 }
 
-/*--------------------------------- ГЛАВНАЯ НАВИГАЦИЯ ПЛАНШЕТ ------------------------------------------*/
+/*--------------------------------- MAIN NAV/ГЛАВНАЯ НАВИГАЦИЯ - ПЛАНШЕТ ------------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .main-nav {
@@ -275,7 +279,7 @@
   }
 }
 
-/*---------------------------------ГЛАВНАЯ НАВИГАЦИЯ ДЕСКТОП------------------------------------------*/
+/*--------------------------------- MAIN NAV/ГЛАВНАЯ НАВИГАЦИЯ - ДЕСКТОП------------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .main-nav {
