--- a/source/sass/block/_modal-form.scss
+++ b/source/sass/block/_modal-form.scss
@@ -1,5 +1,4 @@
-// Модальное окно
-
+/*--------------------------------- MODAL FORM/ МОДАЛЬНОЕ ОКНО ------------------------------------------*/
 .modal-form {
   display: none;
   position: fixed;
@@ -78,6 +77,8 @@
   width: 260px;
   height: 54px;
 }
+
+/*--------------------------------- MODAL FORM/ МОДАЛЬНОЕ ОКНО - ПЛАНШЕТ ------------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .modal-form {
