--- a/source/sass/block/_overlay.scss
+++ b/source/sass/block/_overlay.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- OVERLAY/ ОВЕРЛЕЙ ------------------------------------------*/
 .overlay {
   display: none;
   position: fixed;
