--- a/source/sass/block/_page-footer.scss
+++ b/source/sass/block/_page-footer.scss
@@ -1,5 +1,4 @@
-// ФУТЕР
-
+/*--------------------------------- FOOTER/ ФУТЕР - ПЛАНШЕТ ---------------------------------------*/
 .page-footer {
   width: 100%;
   min-height: 160px;
