--- a/source/sass/block/_page-top.scss
+++ b/source/sass/block/_page-top.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- TOP / ЗАГОЛОВОК ---------------------------------------*/
 .page-top {
   position: relative;
   width: 320px;
@@ -33,6 +34,7 @@
 .page-top__heading {
   @include container;
 }
+/*--------------------------------- TOP / ЗАГОЛОВОК - ПЛАНШЕТ ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .page-top {
@@ -74,6 +76,8 @@
     @include container;
   }
 }
+
+/*--------------------------------- TOP / ЗАГОЛОВОК - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .page-top {
