--- a/source/sass/block/_page-header.scss
+++ b/source/sass/block/_page-header.scss
@@ -1,8 +1,11 @@
+/*--------------------------------- PAGE HEADER / ШАПКА ---------------------------------------*/
 .page-header {
   width: 320px;
   margin: 0 auto;
   background-color: $bg-main;
 }
+
+/*--------------------------------- PAGE HEADER / ШАПКА - ПЛАНШЕТ ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .page-header {
@@ -11,6 +14,8 @@
     padding-right: 50px;
   }
 }
+
+/*--------------------------------- PAGE HEADER / ШАПКА - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .page-header {
