--- a/source/sass/block/_product-card.scss
+++ b/source/sass/block/_product-card.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- PRODUCT CARD / КАРТОЧКА ТОВАРА ---------------------------------------*/
 .product-card {
   text-align: left;
 
@@ -17,6 +18,7 @@
   display: inline-block;
   padding-top: 22px;
   opacity: 0.2;
+  overflow: hidden;
 
   &:hover {
     opacity: 1;
@@ -72,6 +74,8 @@
   justify-content: space-between;
 }
 
+/*--------------------------------- PRODUCT CARD / КАРТОЧКА ТОВАРА - ПЛАНШЕТ ---------------------------------------*/
+
 @media (min-width: $tablet-width) {
   .product-card {
     display: flex;
@@ -120,6 +124,8 @@
     margin-top: 34px;
   }
 }
+
+/*--------------------------------- PRODUCT CARD / КАРТОЧКА ТОВАРА - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .product-card {
