--- a/source/sass/block/_reviews.scss
+++ b/source/sass/block/_reviews.scss
@@ -1,5 +1,4 @@
-// ОТЗЫВЫ
-
+/*--------------------------------- REVIEWS / ОТЗЫВЫ ---------------------------------------*/
 .reviews {
   padding-top: 24px;
   position: relative;
@@ -67,18 +66,21 @@
   }
 }
 
-/*--------------------------------- ОТЗЫВЫ - ПЛАНШЕТ ---------------------------------------*/
+.reviews__slider-control {
+  display: flex;
+  flex-direction: row;
+  margin-top: 31px;
+  margin-bottom: 39px;
+}
+
+/*--------------------------------- REVIEWS / ОТЗЫВЫ - ПЛАНШЕТ ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
   .reviews {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background: url("../img/review@1x.jpg");
-    background-repeat: no-repeat;
     padding-top: 80px;
-    background-size: 350px 475px;
-    background-color: #ffffff;
     width: 768px;
     margin: 0 auto;
 
@@ -89,6 +91,22 @@
       background-size: 768px 20px;
       transform: rotate(180deg);
     }
+
+    &::before {
+      @include pseudo;
+      width: 350px;
+      height: 475px;
+      top: 0;
+      left: 0;
+      background: #f9f9f9 url("../img/review@1x.jpg") no-repeat;
+      background-size: 350px 475px;
+    }
+  }
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    .reviews::before {
+      background: #f9f9f9  url("../img/review@2x.jpg") no-repeat;
+    }
   }
 
   .reviews__item {
@@ -98,12 +116,6 @@
     display: flex;
     flex-direction: column;
     padding-top: 0;
-  }
-
-  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    .reviews {
-      background-image: url("../img/review@2x.jpg");
-    }
   }
 
   .reviews__body {
@@ -129,6 +141,7 @@
     order: -2;
     margin-left: -4px;
     margin-bottom: 50px;
+    z-index: 3;
   }
 
   .reviews__comment {
@@ -148,17 +161,23 @@
   .reviews__link {
     width: 100px;
   }
+
+  .reviews__slider-control {
+    position: absolute;
+    bottom: 3px;
+    right: 0;
+    border: none;
+    margin: 0;
+  }
 }
 
-/*--------------------------------- ОТЗЫВЫ - ДЕСКТОП ---------------------------------------*/
+/*--------------------------------- REVIEWS / ОТЗЫВЫ - ДЕСКТОП ---------------------------------------*/
 
 @media (min-width: $desktop-width) {
   .reviews {
-    background-position: top 0 left 0;
     width: 1050px;
     padding-top: 68px;
     margin-top: 80px;
-
 
     &::after {
       bottom: -93px;
@@ -166,6 +185,11 @@
       width: 1050px;
       background-size: 1054px 24px;
       transform: rotate(180deg);
+    }
+
+    &::before {
+      background-size: 350px 457px;
+      height: 457px;
     }
   }
 
@@ -211,5 +235,12 @@
   .reviews__btn {
     margin-top: 9px;
     margin-left: 478px;
+  }
+
+  .reviews__slider-control {
+    margin: 0;
+    padding: 0;
+    bottom: 4px;
+    right: -100px;
   }
 }
