--- a/source/sass/block/_visually-hidden.scss
+++ b/source/sass/block/_visually-hidden.scss
@@ -1,3 +1,4 @@
+/*--------------------------------- VISUALLY HIDDEN / ВИЗУАЛЬНО СКРЫТО ---------------------------------------*/
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
