--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "_base";
 @import "_mixins";
 @import "block/_about";
-@import "block/_button";
+@import "block/_btn";
 @import "block/_catalog";
 @import "block/_contacts";
 @import "block/_container";
