--- a/source/sass/block/_contacts.scss
+++ b/source/sass/block/_contacts.scss
@@ -1,6 +1,20 @@
 /*--------------------------------- CONTACTS/КОНТАКТЫ ---------------------------------------*/
 .contacts {
   margin-top: 90px;
+  position: relative;
+
+  &::before {
+    @include pseudo;
+    background-image: url("../img/bg-zigzag-line.svg");
+    top: -46px;
+    height: 7px;
+    width: 100%;
+    fill: #f9f9f9;
+    background-size: 320px 100%;
+    background-repeat: repeat-x;
+    background-position: center bottom;
+    transform: rotate(180deg);
+  }
 }
 
 .contacts__list {
@@ -72,8 +86,8 @@
 
 .contacts__btn {
   font-size: 18px;
-  margin-top: 28px;
-  margin-bottom: 39px;
+  margin-top: 30px;
+  margin-bottom: 36px;
 }
 
 .contacts__container {
@@ -86,8 +100,13 @@
 @media (min-width: $tablet-width) {
   .contacts {
     margin-top: 145px;
-    position: relative;
     margin-bottom: 18px;
+
+    &::before {
+      top: -75px;
+      height: 20px;
+      background-size: 768px 100%;
+    }
   }
 
   .contacts__heading {
@@ -158,6 +177,12 @@
     margin-top: 230px;
     width: 100%;
     margin-bottom: 65px;
+
+    &::before {
+      top: -162px;
+      height: 24px;
+      background-size: 1054px 24px;
+    }
   }
 
   .contacts__heading {
