--- a/source/sass/block/_production.scss
+++ b/source/sass/block/_production.scss
@@ -1,12 +1,17 @@
 /*--------------------------------- PRODUCTION / ПРОИЗВОДСТВО ---------------------------------------*/
 .production {
   margin-top: 30px;
+  padding-bottom: 15px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
 
   &:hover {
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -36,7 +41,7 @@
 
   &:active {
     transform: scale(0.8);
-    opacity: 0.5; //0.3 как по макету, совсем не видно
+    opacity: 0.3;
   }
 }
 
@@ -60,7 +65,7 @@
   width: 192px;
   margin-left: 33px;
   margin-top: 25px;
-  margin-bottom: 33px;
+  margin-bottom: 16px;
 }
 
 .production__heading {
@@ -138,7 +143,7 @@
     width: 100%;
     margin-left: 2px;
     margin-top: 20px;
-    margin-bottom: 46px;
+    margin-bottom: 30px;
     padding-left: 100px;
     padding-right: 100px;
   }
